TP_final/Debug/build.log
Building file: ../levelset.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"levelset.d" -MT"levelset.o" -o "levelset.o" "../levelset.c"
../levelset.c: In function ‘createEnemy’:
../levelset.c:50:32: error: initialization of ‘support_entity *’ from incompatible pointer type ‘enemy_entity *’ [-Wincompatible-pointer-types]
   50 |         support_entity* temp = enemigo;
      |                                ^~~~~~~
../levelset.c: In function ‘nextLevel’:
../levelset.c:188:1: warning: control reaches end of non-void function [-Wreturn-type]
  188 | }
      | ^
make: *** [subdir.mk:45: levelset.o] Error 1
